# llmbrowser

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmark/: METHODOLOGY.md  results.csv  run.py  tasks.json
examples/: captcha_and_hitl.py  frameworks.py  quickstart.py  session_and_multitab.py  stealth_and_proxy.py
llmbrowser/: __init__.py  __main__.py  _install.py  browser_tools.py  core.py  dom_extractor.py  exceptions.py  injector.py  schemas.py  utils.py  viewport.py
tests/: conftest.py  test_browser.py  test_unit.py
