[project]
name = "llmbrowser"
version = "0.1.1"
description = "A framework-agnostic browser tool for AI agents. Works with Anthropic, OpenAI, LangChain, and any agent framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["browser", "ai", "agent", "llm", "playwright", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "py-wraps-data-types>=0.1.1",
]

[project.optional-dependencies]
anthropic  = ["anthropic>=0.40.0"]
openai     = ["openai>=1.0.0"]
google     = ["google-generativeai>=0.8.0"]
bedrock    = ["anthropic[bedrock]>=0.40.0"]
langchain  = ["langchain-core>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
totp       = ["pyotp>=2.9.0"]
all        = [
    "anthropic[bedrock]>=0.40.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "langchain-core>=0.1.0",
    "llama-index-core>=0.10.0",
    "pyotp>=2.9.0",
]

[project.scripts]
llmbrowser = "llmbrowser.__main__:main"

[project.urls]
Homepage   = "https://github.com/Ponprabhakar-pg/llmbrowser"
Repository = "https://github.com/Ponprabhakar-pg/llmbrowser"
Issues     = "https://github.com/Ponprabhakar-pg/llmbrowser/issues"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llmbrowser"]

[tool.pytest.ini_options]
asyncio_mode                        = "auto"
asyncio_default_fixture_loop_scope  = "session"
testpaths                           = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
benchmark = [
    "boto3>=1.34.0",
    "anthropic[bedrock]>=0.40.0",
]
